// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RFC 7807 Problem Catalog Snapshots 400 - Bad Request (validation-error) should return consistent problem details for malformed JSON 1`] = `
{
  "detail": "Invalid JSON in request body",
  "status": 400,
  "title": "Validation Error",
  "type": "https://peacprotocol.org/problems/validation-error",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 400 - Bad Request (validation-error) should return consistent problem details for missing required fields 1`] = `
{
  "detail": "Invalid agreement proposal structure",
  "instance": Any<String>,
  "status": 400,
  "title": "Validation Error",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/validation-error",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 404 - Not Found should return consistent problem details for unknown agreement 1`] = `
{
  "detail": "Agreement agr_01JFNKT5UNKNOWN999999 not found",
  "instance": Any<String>,
  "status": 404,
  "title": "Not Found",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/not-found",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 409 - Conflict (agreement-mismatch) should return consistent problem details for fingerprint mismatch 1`] = `
{
  "actual_fingerprint": "cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc",
  "agreement_id": "agr_01JFNKT5VFQG0XVBR7Q92JZ3M9",
  "detail": "Agreement fingerprint mismatch",
  "expected_fingerprint": "dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd",
  "instance": Any<String>,
  "status": 409,
  "title": "Conflict",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/agreement-mismatch",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 415 - Unsupported Media Type should return consistent problem details for wrong content type 1`] = `
{
  "detail": "Content-Type must be application/json",
  "instance": Any<String>,
  "provided": "text/plain",
  "status": 415,
  "supported": [
    "application/json",
  ],
  "title": "Unsupported Media Type",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/unsupported-media-type",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 422 - Unprocessable Entity (invalid-reference) should return consistent problem details for missing agreement header 1`] = `
{
  "detail": "X-PEAC-Agreement header is required for payment operations",
  "instance": Any<String>,
  "required_header": "X-PEAC-Agreement",
  "status": 422,
  "title": "Unprocessable Entity",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/invalid-reference",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 422 - Unprocessable Entity (invalid-reference) should return consistent problem details for unknown agreement reference 1`] = `
{
  "detail": "Invalid agreement ID format in X-PEAC-Agreement header",
  "expected_format": "agr_<ulid>",
  "instance": Any<String>,
  "provided": "agr_01JFNKT5NONEXISTENT999999",
  "status": 422,
  "title": "Unprocessable Entity",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/invalid-reference",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 426 - Upgrade Required (protocol-version-required) should return consistent problem details for missing protocol header 1`] = `
{
  "detail": "X-PEAC-Protocol header is required",
  "instance": Any<String>,
  "required_header": "X-PEAC-Protocol",
  "status": 426,
  "supported": [
    "0.9.10",
  ],
  "title": "Upgrade Required",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/protocol-version-required",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 426 - Upgrade Required (protocol-version-required) should return consistent problem details for unsupported protocol version 1`] = `
{
  "detail": "Version 0.8.0 is not supported",
  "instance": Any<String>,
  "provided_version": "0.8.0",
  "status": 426,
  "supported": [
    "0.9.10",
  ],
  "title": "Upgrade Required",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/protocol-version-unsupported",
  "x-peac-advice": "Supported versions: 0.9.10",
}
`;

exports[`RFC 7807 Problem Catalog Snapshots 500 - Internal Server Error should return consistent problem details for internal errors 1`] = `
{
  "detail": "Payment processing failed",
  "error": Any<String>,
  "instance": Any<String>,
  "status": 500,
  "title": "Internal Server Error",
  "trace_id": Any<String>,
  "type": "https://peacprotocol.org/problems/internal-error",
}
`;
